Fix numpy and huggingface_hub

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -69,7 +69,7 @@
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
-        "auto_off   = True  # @param {type: \"boolean\"}\n",
+        "auto_off   = False  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
@@ -107,7 +107,7 @@
         "\n",
         "#@markdown ### ▶️ Setup\n",
         "#@markdown El nombre de tu proyecto será el mismo que el de la carpeta que contiene tus imágenes. No se permiten espacios, puedes usar `guión bajo` si el nombre es muy largo.\n",
-        "project_name = \"\" #@param {type:\"string\"}\n",
+        "project_name = \"makima\" #@param {type:\"string\"}\n",
         "project_name = project_name.strip()\n",
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
@@ -181,7 +181,7 @@
         "\n",
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
-        "resolution = 1024 #@param {type:\"slider\", min:768, max:1536, step:128}\n",
+        "resolution = 1024 #@param {type:\"dropdown\", min:768, max:1536, step:128}\n",
         "#@markdown Activa `Flip Aug`si tu dataset es pequeño, util en personajes isometricos, volteara todas tus imagenes (modo espejo) para aprender el doble, pero podria afectar a personajes con tatuajes, marcas, cicatrices etc...\n",
         "flip_aug = False #@param {type:\"boolean\"}\n",
         "caption_extension = \".txt\" # @param [\".txt\",\".caption\"]\n",
@@ -339,10 +339,10 @@
         "\n",
         "  !apt -y update -qq\n",
         "  !apt -y install aria2 -qq\n",
-        "  !pip install transformers==4.30.2 diffusers==0.18.2 -q \\\n",
+        "  !pip install transformers==4.30.2 diffusers==0.18.2 numpy==1.26.4 -q \\\n",
         "    bitsandbytes==0.45.1 flax==0.7.5 jax==0.4.23 jaxlib==0.4.23 -q \\\n",
         "    pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 -q \\\n",
-        "    safetensors pygments huggingface-hub==0.22.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 -q \\\n",
+        "    safetensors pygments huggingface-hub==0.25.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 -q \\\n",
         "    dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 -q \\\n",
         "    torch==2.5.1+cu121 --extra-index https://download.pytorch.org/whl/cu121 -q\n",
         "  !pip install -e .\n",
