--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -196,7 +196,7 @@
         "\n",
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
-        "resolution = 1024 #@param {type:\"slider\", min:768, max:1536, step:128}\n",
+        "resolution = 1024 #@param {type:\"dropdown\", min:768, max:1536, step:128}\n",
         "#@markdown Activa `Flip Aug`si tu dataset es pequeño, util en personajes isometricos, volteara todas tus imagenes (modo espejo) para aprender el doble, pero podria afectar a personajes con tatuajes, marcas, cicatrices etc...\n",
         "flip_aug = False #@param {type:\"boolean\"}\n",
         "caption_extension = \".txt\" # @param [\".txt\",\".caption\"]\n",
@@ -627,6 +627,11 @@
         "    # Local model, already checked to exist\n",
         "    model_file = real_model_url\n",
         "    print(f\"📁 Using local model file: {model_file}\")\n",
+        "\n",
+        "        # Download VAE\n",
+        "    if not os.path.exists(vae_file):\n",
+        "      !aria2c \"{vae_url}\" --console-log-level=warn -c -s 16 -x 16 -k 10M -d / -o \"{vae_file}\"\n",
+        "\n",
         "    # Validation\n",
         "    if model_file.lower().endswith(\".safetensors\"):\n",
         "      from safetensors.torch import load_file as load_safetensors\n",
