delete locon, change lokr

--- a/Fix_Lora_Trainer_XL_EX.ipynb
+++ b/Fix_Lora_Trainer_XL_EX.ipynb
@@ -196,7 +196,7 @@
         "\n",
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
-        "resolution = 1024 #@param {type:\"slider\", min:768, max:1536, step:128}\n",
+        "resolution = 1024 #@param {type:\"dropdown\", min:768, max:1536, step:128}\n",
         "#@markdown Activa `Flip Aug`si tu dataset es pequeño, util en personajes isometricos, volteara todas tus imagenes (modo espejo) para aprender el doble, pero podria afectar a personajes con tatuajes, marcas, cicatrices etc...\n",
         "flip_aug = False #@param {type:\"boolean\"}\n",
         "caption_extension = \".txt\" # @param [\".txt\",\".caption\"]\n",
@@ -244,7 +244,7 @@
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
-        "lora_type = \"LoRA\" # @param [\"LoRA\",\"LoCon\",\"LoKR\"]\n",
+        "lora_type = \"LoKR\" # @param [\"LoKR\", \"LoRA\"]\n",
         "\n",
         "#@markdown A continuación se muestran algunos valores XL recomendados para las siguientes configuraciones:\n",
         "\n",
@@ -261,13 +261,11 @@
         "conv_dim = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "conv_alpha = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "\n",
-        "network_module = \"networks.lora\"\n",
-        "network_args = None\n",
-        "if lora_type.lower() == \"locon\":\n",
-        "  network_args = [f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
         "network_module = \"lycoris.kohya\"\n",
-        "networks_args = None\n",
+        "network_args = None\n",
         "network_args = [f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
+        "if lora_type.lower() == \"lora\":\n",
+        "  network_args = None\n",
         "\n",
         "#@markdown ### ▶️ Training\n",
         "#@markdown Ajuste estos parámetros según la configuración de su colab.\n",
