fixed, lora, locon, lokr

--- a/Fix_Lora_Trainer_XL_EX.ipynb
+++ b/Fix_Lora_Trainer_XL_EX.ipynb
@@ -237,14 +237,15 @@
         "#@markdown Estas configuraciones pueden producir mejores resultados.`min_snr_gamma` ajusta la pérdida con el tiempo. `ip_noise_gamma` ajusta el ruido aleatorio.\n",
         "min_snr_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4, max:16.0, step:0.5}\n",
-        "ip_noise_gamma_enabled = False #@param {type:\"boolean\"}\n",
+        "ip_noise_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "ip_noise_gamma = 0.05 #@param {type:\"slider\", min:0.05, max:0.1, step:0.01}\n",
         "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros) no es necesario activarlo si entrenas Lora Vpred.\n",
         "multinoise = False #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
-        "lora_type = \"LoKR\" # @param [\"LoKR\", \"LoRA\"]\n",
+        "selected_module = \"LoRA\" # @param [\"LoRA\",\"LoCon\",\"LoKR\"]\n",
+        "#lora_type = \"LoKR\" # @param [\"LoKR\", \"LoRA\"]\n",
         "\n",
         "#@markdown A continuación se muestran algunos valores XL recomendados para las siguientes configuraciones:\n",
         "\n",
@@ -257,15 +258,25 @@
         "#@markdown Más dim significa un Lora más grande, puede contener más información, pero más no siempre es mejor.\n",
         "network_dim = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "network_alpha = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
-        "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon.\n",
+        "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon y LoKR para este ultimo usa `8 de conv_dim y 16 en conv_alpha`.\n",
         "conv_dim = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "conv_alpha = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "\n",
-        "network_module = \"lycoris.kohya\"\n",
-        "network_args = None\n",
-        "network_args = [f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
-        "if lora_type.lower() == \"lora\":\n",
-        "  network_args = None\n",
+        "# Definir los módulos y sus argumentos\n",
+        "network_modules = {\n",
+        "    \"LoRA\": {\"module\": \"networks.lora\", \"args\": None},\n",
+        "    \"LoCon\": {\"module\": \"lycoris.kohya\", \"args\": None},\n",
+        "    \"LoKR\": {\"module\": \"lycoris.kohya\", \"args\": None}\n",
+        "}\n",
+        "\n",
+        "# Establecer los argumentos según el tipo de LoRA\n",
+        "network_modules[\"LoCon\"][\"args\"] = [f\"algo=locon\", f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
+        "network_modules[\"LoKR\"][\"args\"] = [f\"algo=lokr\", f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
+        "\n",
+        "# Ahora puedes seleccionar el módulo que deseas usar y sus argumentos\n",
+        "network_module = network_modules[selected_module][\"module\"]\n",
+        "network_args = network_modules[selected_module][\"args\"]\n",
+        "\n",
         "\n",
         "#@markdown ### ▶️ Training\n",
         "#@markdown Ajuste estos parámetros según la configuración de su colab.\n",
