add recommended values for lokr

--- a/Fix_Lora_Trainer_XL_EX.ipynb
+++ b/Fix_Lora_Trainer_XL_EX.ipynb
@@ -254,11 +254,12 @@
         "#@markdown | Personaje LoRA | 4 | 16 |   |   |\n",
         "#@markdown | Regular y Estilo LoRA | 8 | 4 |   |   |\n",
         "#@markdown | Style LoCon | 16 | 8 | 16 | 8 |\n",
+        "#@markdown | regular LoRK | 32 | 16 | 32 | 16 |\n",
         "\n",
         "#@markdown Más dim significa un Lora más grande, puede contener más información, pero más no siempre es mejor.\n",
         "network_dim = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "network_alpha = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
-        "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon y LoKR para este ultimo usa `8 de conv_dim y 16 en conv_alpha`.\n",
+        "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon y LoKR para este ultimo usa `32 de nertwork dim, conv_dim y 16 en network alpha y conv_alpha`.\n",
         "conv_dim = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "conv_alpha = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "\n",
