--- a/Fix_Lora_Trainer_XL_EX.ipynb
+++ b/Fix_Lora_Trainer_XL_EX.ipynb
@@ -244,7 +244,7 @@
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
-        "selected_module = \"LoRA\" # @param [\"LoRA\",\"LoCon\",\"LoKR\"]\n",
+        "selected_module = \"LoRA\" # @param [\"LoRA\",\"LoCon\",\"LoKR\", \"DyLoRA\"]\n",
         "#lora_type = \"LoKR\" # @param [\"LoKR\", \"LoRA\"]\n",
         "\n",
         "#@markdown A continuación se muestran algunos valores XL recomendados para las siguientes configuraciones:\n",
@@ -254,12 +254,13 @@
         "#@markdown | Personaje LoRA | 4 | 16 |   |   |\n",
         "#@markdown | Regular y Estilo LoRA | 8 | 4 |   |   |\n",
         "#@markdown | Style LoCon | 16 | 8 | 16 | 8 |\n",
-        "#@markdown | regular LoRK | 32 | 16 | 32 | 16 |\n",
+        "#@markdown | regular LoRK | 8 | 4 | 4 | 1 |\n",
+        "#@markdown | regular DyLoRA | 8 | 16 | 16 | 8 |\n",
         "\n",
         "#@markdown Más dim significa un Lora más grande, puede contener más información, pero más no siempre es mejor.\n",
         "network_dim = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "network_alpha = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
-        "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon y LoKR para este ultimo usa `32 de nertwork dim, conv_dim y 16 en network alpha y conv_alpha`.\n",
+        "#@markdown Los siguientes dos valores solo se aplican a las capas adicionales de LoCon, LoKR y DyLoRA, mira los valores recomendados en la table de arriba.\n",
         "conv_dim = 16 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "conv_alpha = 8 #@param {type:\"number\", min:1, max:32, step:1}\n",
         "\n",
@@ -267,12 +268,14 @@
         "network_modules = {\n",
         "    \"LoRA\": {\"module\": \"networks.lora\", \"args\": None},\n",
         "    \"LoCon\": {\"module\": \"lycoris.kohya\", \"args\": None},\n",
-        "    \"LoKR\": {\"module\": \"lycoris.kohya\", \"args\": None}\n",
+        "    \"LoKR\": {\"module\": \"lycoris.kohya\", \"args\": None},\n",
+        "    \"DyLoRA\": {\"module\": \"lycoris.kohya\", \"args\": None}\n",
         "}\n",
         "\n",
         "# Establecer los argumentos según el tipo de LoRA\n",
         "network_modules[\"LoCon\"][\"args\"] = [f\"algo=locon\", f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
         "network_modules[\"LoKR\"][\"args\"] = [f\"algo=lokr\", f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
+        "network_modules[\"DyLoRA\"][\"args\"] = [f\"algo=dylora\", f\"conv_dim={conv_dim}\", f\"conv_alpha={conv_alpha}\"]\n",
         "\n",
         "# Ahora puedes seleccionar el módulo que deseas usar y sus argumentos\n",
         "network_module = network_modules[selected_module][\"module\"]\n",
