--- a/Fix_Lora_Trainer_XL_EX.ipynb
+++ b/Fix_Lora_Trainer_XL_EX.ipynb
@@ -736,7 +736,7 @@
         "def calculate_rex_steps():\n",
         "  # https://github.com/derrian-distro/LoRA_Easy_Training_scripts_Backend/blob/c34084b0435e6e19bb7a01ac1ecbadd185ee8c1e/utils/validation.py#L268\n",
         "  global max_train_steps\n",
-        "  print(\"\\n🤔 Calculando los pasos de rex\")\n",
+        "  print(\"\\n🤔 Calculating Rex steps\")\n",
         "  if max_train_steps:\n",
         "    calculated_max_steps = max_train_steps\n",
         "  else:\n",
@@ -761,10 +761,10 @@
         "                for _ in range(subset[\"num_repeats\"]):\n",
         "                    bucketManager.add_image(bucket_reso, image)\n",
         "    steps_before_acc = sum(math.ceil(len(bucket) / train_batch_size) for bucket in bucketManager.buckets)\n",
-        "    max_train_steps = math.ceil(steps_before_acc / gradient_accumulation_steps) * max_train_epochs\n",
+        "    calculated_max_steps = math.ceil(steps_before_acc / gradient_accumulation_steps) * max_train_epochs\n",
         "    del bucketManager\n",
         "\n",
-        "  cycle_steps = max_train_steps // (lr_scheduler_num_cycles or 1)\n",
+        "  cycle_steps = calculated_max_steps // (lr_scheduler_num_cycles or 1)\n",
         "  print(f\"  cycle steps: {cycle_steps}\")\n",
         "  lr_scheduler_args.append(f\"first_cycle_max_steps={cycle_steps}\")\n",
         "\n",
