--- a/Fix_Lora_Trainer_XL_EX.ipynb
+++ b/Fix_Lora_Trainer_XL_EX.ipynb
@@ -96,6 +96,7 @@
         "if \"override_config_file\" not in globals():\n",
         "  override_config_file = None\n",
         "\n",
+        "COMMIT = \"47ef6ed843ee1951cd07838c5fdcca60c954130c\"\n",
         "LOWRAM = True\n",
         "LOAD_TRUNCATED_IMAGES = True\n",
         "BETTER_EPOCH_NAMES = True\n",
@@ -193,6 +194,8 @@
         "else:\n",
         "  vae_url = \"https://huggingface.co/stabilityai/sdxl-vae/resolve/main/sdxl_vae.safetensors\"\n",
         "  vae_file = \"/content/sdxl_vae.safetensors\"\n",
+        "\n",
+        "model_url = model_url.strip()\n",
         "\n",
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
@@ -399,10 +402,11 @@
         "  !apt -y update -qq\n",
         "  !apt install -y python3.10-venv aria2 -qq\n",
         "  !git clone https://github.com/derrian-distro/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
-        "  !chmod 755 /content/trainer/colab_install.sh > /dev/null 2> errores.log\n",
-        "\n",
-        "  print('\\033[93mInstalando dependencias, esto puede tardar hasta ¡¡6 minutos!!\\033[0m')\n",
         "  os.chdir(trainer_dir)\n",
+        "  !git reset --hard {COMMIT}\n",
+        "  from IPython.display import display, HTML\n",
+        "  display(HTML(\"<h3 style='color: yellow;'>Descargando dependencias ¡¡esto puede tardar hasta 6 minutos!!...</h3>\"))\n",
+        "  !chmod 755 ./colab_install.sh\n",
         "  !./colab_install.sh > /dev/null 2> errores.log\n",
         "\n",
         "  # fix logging\n",
@@ -1045,7 +1049,7 @@
         "\n",
         "# @markdown crea una cuenta de HuggingFace [aquí](https://huggingface.co/) o si ya la tienes simplemente usa tu token 👇\n",
         "# @markdown > Obten **tú** token `EN WRITE` de Huggingface [aquí](https://huggingface.co/settings/tokens) 👈\n",
-        "write_token = \"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\"  # @param {type:\"string\"}\n",
+        "write_token = \"\"  # @param {type:\"string\"}\n",
         "#@markdown Complete esto si desea cargarlo en su organización, o simplemente déjelo vacío.\n",
         "orgs_name = \"\"  # @param{type:\"string\"}\n",
         "# @markdown Si su repositorio de modelo/conjunto de datos no existe, lo creará automáticamente.\n",
