--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -96,6 +96,7 @@
         "if \"override_config_file\" not in globals():\n",
         "  override_config_file = None\n",
         "\n",
+        "COMMIT = \"47ef6ed843ee1951cd07838c5fdcca60c954130c\"\n",
         "LOWRAM = True\n",
         "LOAD_TRUNCATED_IMAGES = True\n",
         "BETTER_EPOCH_NAMES = True\n",
@@ -194,6 +195,8 @@
         "  vae_url = \"https://huggingface.co/stabilityai/sdxl-vae/resolve/main/sdxl_vae.safetensors\"\n",
         "  vae_file = \"/content/sdxl_vae.safetensors\"\n",
         "\n",
+        "model_url = model_url.strip()\n",
+        "\n",
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
         "resolution = 1024 #@param {type:\"dropdown\", min:768, max:1536, step:128}\n",
@@ -237,7 +240,7 @@
         "#@markdown Estas configuraciones pueden producir mejores resultados.`min_snr_gamma` ajusta la pérdida con el tiempo. `ip_noise_gamma` ajusta el ruido aleatorio.\n",
         "min_snr_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4, max:16.0, step:0.5}\n",
-        "ip_noise_gamma_enabled = False #@param {type:\"boolean\"}\n",
+        "ip_noise_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "ip_noise_gamma = 0.05 #@param {type:\"slider\", min:0.05, max:0.1, step:0.01}\n",
         "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros) no es necesario activarlo si entrenas Lora Vpred.\n",
         "multinoise = False #@param {type:\"boolean\"}\n",
@@ -373,15 +376,18 @@
         "dataset_config_file = os.path.join(config_folder, \"dataset_config.toml\")\n",
         "\n",
         "def install_trainer():\n",
-        "  !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
+        "  if 'installed' not in globals():\n",
+        "    !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
+        "    installed = True\n",
         "\n",
         "  !apt -y update -qq\n",
         "  !apt install -y python3.10-venv aria2 -qq\n",
         "  !git clone https://github.com/derrian-distro/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
-        "  !chmod 755 /content/trainer/colab_install.sh > /dev/null 2> errores.log\n",
-        "\n",
-        "  print('\\033[93mInstalando dependencias, esto puede tardar hasta ¡¡6 minutos!!\\033[0m')\n",
         "  os.chdir(trainer_dir)\n",
+        "  !git reset --hard {COMMIT}\n",
+        "  from IPython.display import display, HTML\n",
+        "  display(HTML(\"<h2 style='color: yellow;'>Descargando dependencias ¡¡esto puede tardar hasta 6 minutos!!...</h2>\"))\n",
+        "  !chmod 755 ./colab_install.sh\n",
         "  !./colab_install.sh > /dev/null 2> errores.log\n",
         "\n",
         "  # fix logging\n",
