--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -112,7 +112,7 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Illustrious_0.1\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\", \"animagine_4.0_zero\", \"Illustrious_0.1\", \"Illustrious_1.0\", \"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAI-XL-Vpred-v0.75\",\"noobai-xl-vpred-v0.5\"]\n",
+        "training_model = \"Illustrious_0.1\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAI-XL-Vpred-v0.75\",\"noobai-xl-vpred-v0.5\"]\n",
         "optional_custom_training_model = \"\" #@param {type:\"string\"}\n",
         "#@markdown Marca esta opción si deseas entrenar con un modelo en formarto diffusers o el modelo custom esta en dicho formato\n",
         "custom_model_is_diffusers = False #@param {type:\"boolean\"}\n",
@@ -151,10 +151,10 @@
         "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0/resolve/main/Illustrious-XL-v0.1.safetensors\"\n",
         "elif \"Illustrious_1.0\" in training_model:\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious-xl-v1.0\"\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious_2.0\"\n",
         "  else:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious-xl-v1.0/resolve/main/Illustrious-XL-v1.0.safetensors\"\n",
-        "  model_file = \"/content/Illustrious-XL-v1.0.safetensors\"\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious_2.0/resolve/main/illustriousXL20_v20.safetensors\"\n",
+        "  model_file = \"/content/illustriousXL20_v20.safetensors\"\n",
         "elif \"NoobAI-XL0.75\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.75\"\n",
