--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -69,7 +69,7 @@
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
-        "auto_off   = False  # @param {type: \"boolean\"}\n",
+        "auto_off   = True  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
@@ -107,12 +107,12 @@
         "\n",
         "#@markdown ### ▶️ Setup\n",
         "#@markdown El nombre de tu proyecto será el mismo que el de la carpeta que contiene tus imágenes. No se permiten espacios, puedes usar `guión bajo` si el nombre es muy largo.\n",
-        "project_name = \"makima\" #@param {type:\"string\"}\n",
+        "project_name = \"\" #@param {type:\"string\"}\n",
         "project_name = project_name.strip()\n",
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Illustrious_0.1\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_1.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\"]\n",
+        "training_model = \"Illustrious_0.1\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\"]\n",
         "optional_custom_training_model_url = \"\" #@param {type:\"string\"}\n",
         "#@markdown El uso de un modelo en diffusers utiliza menos recursos. Las opciones anteriores funcionarán con o sin diffusers.\n",
         "load_diffusers = True #@param {type:\"boolean\"}\n",
@@ -144,12 +144,12 @@
         "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/OnomaAIResearch/Illustrious-xl-early-release-v0/resolve/main/Illustrious-XL-v0.1.safetensors\"\n",
-        "elif \"Illustrious_1.0\" in training_model:\n",
+        "elif \"Illustrious_2.0\" in training_model:\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious-xl-v1.0\"\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious_2.0\"\n",
         "  else:\n",
-        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious-xl-v1.0/resolve/main/Illustrious-XL-v1.0.safetensors\"\n",
-        "  model_file = \"/content/Illustrious-XL-v1.0.safetensors\"\n",
+        "    model_url = \"https://huggingface.co/WhiteAiZ/Illustrious_2.0/resolve/main/illustriousXL20_v20.safetensors\"\n",
+        "  model_file = \"/content/illustriousXL20_v20.safetensors\"\n",
         "elif \"NoobAI-XL0.75\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.75\"\n",
