--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -67,9 +67,11 @@
         "\n",
         "#install dependencies\n",
         "    # Custom =====================\n",
+        "!pip install uv\n",
+        "!uv venv tagger\n",
         "!git clone https://github.com/corkborg/wd14-tagger-standalone /content/wd14_tagger\n",
-        "!pip -q install prodigyopt==1.0 flax==0.8.4 jax==0.4.23 jaxlib==0.4.23 opencv-python-headless==4.9.0.80 -q\n",
-        "!pip install onnxruntime==1.17.3 -q\n",
+        "%cd /content/wd14_tagger\n",
+        "!uv pip install -r requirements.txt -q\n",
         "    # ============================\n",
         "clear_output()\n",
         "\n",
@@ -90,7 +92,7 @@
         "\n",
         "%store -r\n",
         "\n",
-        "train_data_dir = \"\"  # @param {'type' : 'string'}\n",
+        "train_data_dir = \"/content/drive/MyDrive/Loras/makima/dataset\"  # @param {'type' : 'string'}\n",
         "%store train_data_dir\n",
         "\n",
         "os.makedirs(train_data_dir, exist_ok=True)\n",
@@ -225,7 +227,6 @@
         "from IPython.display import clear_output\n",
         "\n",
         "tag_dir = \"/content/wd14_tagger\"\n",
-        "\n",
         "os.chdir(tag_dir)\n",
         "\n",
         "#@markdown the **WD** **v1** and **v2** models work well in general use (anime, cartoon etc.), the **z3d** models are more focused on **furry** tags and the **ml** models are trained with **danbooru tags** (much more than the WD models) are more accurate but slower, I recommend using them with a **threshold** of `0.4` to `0.6`.\n",
@@ -236,12 +237,13 @@
         "undesire_caption = \"bangs, breasts, multicolored hair, two-tone hair, gradient hair, virtual youtuber, parody, style parody, official alternate costume, official alternate hairstyle, official alternate hair length, alternate costume, alternate hairstyle, alternate hair length, alternate hair color, watermark, text, bubble text, signature, artist name\" # @param {type:\"string\"}\n",
         "extension = \".txt\" # @param [\".txt\", \".caption\"]\n",
         "recursive = False # @param {type:\"boolean\"}\n",
-        "overwrite_existing_caption = False # @param {type:\"boolean\"}\n",
+        "overwrite_existing_caption = True # @param {type:\"boolean\"}\n",
         "\n",
         "#missing dependencies\n",
-        "!pip install torch==2.5.1 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -q\n",
-        "!pip install fairscale==0.4.13 timm==0.6.12 -q\n",
-        "!pip install onnxruntime-gpu==1.18.1 --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/ -q\n",
+        "print(\"installing dependencies please wait\")\n",
+        "!uv pip install torch==2.5.1 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -q\n",
+        "!uv pip install fairscale==0.4.13 timm==0.6.12 -q\n",
+        "!uv pip install onnxruntime-gpu==1.18.1 --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/ -q\n",
         "clear_output()\n",
         "print(\"\\033[96mtagging images please wait...\\033[0m\")\n",
         "\n",
