--- a/Waifu_Diffusion_V3_Dataser_Maker.ipynb
+++ b/Waifu_Diffusion_V3_Dataser_Maker.ipynb
@@ -92,7 +92,7 @@
         "\n",
         "%store -r\n",
         "\n",
-        "train_data_dir = \"/content/drive/MyDrive/Loras/makima/dataset\"  # @param {'type' : 'string'}\n",
+        "train_data_dir = \"\"  # @param {'type' : 'string'}\n",
         "%store train_data_dir\n",
         "\n",
         "os.makedirs(train_data_dir, exist_ok=True)\n",
@@ -237,7 +237,7 @@
         "undesire_caption = \"bangs, breasts, multicolored hair, two-tone hair, gradient hair, virtual youtuber, parody, style parody, official alternate costume, official alternate hairstyle, official alternate hair length, alternate costume, alternate hairstyle, alternate hair length, alternate hair color, watermark, text, bubble text, signature, artist name\" # @param {type:\"string\"}\n",
         "extension = \".txt\" # @param [\".txt\", \".caption\"]\n",
         "recursive = False # @param {type:\"boolean\"}\n",
-        "overwrite_existing_caption = True # @param {type:\"boolean\"}\n",
+        "overwrite_existing_caption = False # @param {type:\"boolean\"}\n",
         "\n",
         "#missing dependencies\n",
         "print(\"installing dependencies please wait\")\n",
