added uv faster installation, changed Illustrious 0.1 to 2.0

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -112,7 +112,7 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Illustrious_0.1\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\"]\n",
+        "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\"]\n",
         "optional_custom_training_model_url = \"\" #@param {type:\"string\"}\n",
         "#@markdown El uso de un modelo en diffusers utiliza menos recursos. Las opciones anteriores funcionarán con o sin diffusers.\n",
         "load_diffusers = True #@param {type:\"boolean\"}\n",
@@ -260,7 +260,7 @@
         "mixed_precision = \"fp16\" #@param [\"bf16\", \"fp16\"]\n",
         "#@markdown El almacenamiento en caché latente en drive agregará un archivo de 250 KB junto a cada imagen, pero usará considerablemente menos memoria.\n",
         "cache_latents = True #@param {type:\"boolean\"}\n",
-        "cache_latents_to_drive = False #@param {type:\"boolean\"}\n",
+        "cache_latents_to_drive = True #@param {type:\"boolean\"}\n",
         "#@markdown La siguiente opción desactivará shuffle_tags y deshabilitará el entrenamiento del codificador de texto.\n",
         "cache_text_encoder_outputs  = False  # @param {type:\"boolean\"}\n",
         "\n",
@@ -327,6 +327,8 @@
         "accelerate_config_file = os.path.join(repo_dir, \"accelerate_config/config.yaml\")\n",
         "\n",
         "def install_dependencies():\n",
+        "  !pip install uv\n",
+        "  !uv venv kohya_trainer\n",
         "  os.chdir(root_dir)\n",
         "  !git clone {SOURCE} {repo_dir}\n",
         "  os.chdir(repo_dir)\n",
@@ -337,19 +339,21 @@
         "\n",
         "  !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
         "\n",
-        "  !apt -y update -qq\n",
-        "  !apt -y install aria2 -qq\n",
-        "  !pip install transformers==4.30.2 diffusers==0.18.2 numpy==1.26.4 -q \\\n",
-        "    bitsandbytes==0.45.1 flax==0.7.5 jax==0.4.23 jaxlib==0.4.23 -q \\\n",
-        "    pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 -q \\\n",
-        "    safetensors pygments huggingface-hub==0.25.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 -q \\\n",
-        "    dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 -q \\\n",
-        "    torch==2.5.1+cu121 --extra-index https://download.pytorch.org/whl/cu121 -q\n",
+        "#  !apt -y update -qq\n",
+        "#  !apt -y install aria2 -qq\n",
+        "  print(\"\\033[93mInstalando dependencias...\\033[0m\")\n",
+        "  print(\"\\033[93mPor favor espere...\\033[0m\")\n",
+        "  !uv pip install transformers==4.30.2 diffusers==0.18.2 numpy==1.26.4 -q\n",
+        "  !uv pip install bitsandbytes==0.45.1 flax==0.7.5 jax==0.4.23 jaxlib==0.4.23 -q\n",
+        "  !uv pip install pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 -q\n",
+        "  !uv pip install safetensors pygments huggingface-hub==0.25.0 wandb invisible-watermark==0.2.0 open-clip-torch==2.20.0 -q\n",
+        "  !uv pip install dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 -q\n",
+        "  !uv pip install torch==2.5.1 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html -q\n",
         "  !pip install -e .\n",
         "  if cross_attention == \"xformers\":\n",
-        "    !pip install -q xformers\n",
+        "    !uv pip install xformers -q\n",
         "  if \"CAME\" in optimizer:\n",
-        "    !pip install came-pytorch\n",
+        "    !uv pip install came-pytorch\n",
         "    !wget https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/train_util.py -q -O library/train_util.py\n",
         "\n",
         "  # patch kohya for minor stuff\n",
