--- a/Dataset_Maker_By_WhiteZ.ipynb
+++ b/Dataset_Maker_By_WhiteZ.ipynb
@@ -69,7 +69,7 @@
         "#@markdown ### 1️⃣ Setup\n",
         "#@markdown This cell will load some requirements and create the necessary folders in your Google Drive. <p>\n",
         "#@markdown Your project name can't contain spaces but it can contain a single / to make a subfolder in your dataset.\n",
-        "project_name = \"makima\" #@param {type:\"string\"}\n",
+        "project_name = \"\" #@param {type:\"string\"}\n",
         "project_name = project_name.strip()\n",
         "#@markdown The folder structure doesn't matter and is purely for comfort. Make sure to always pick the same one. I like organizing by project.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
