change log output

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -388,7 +388,8 @@
         "  from IPython.display import display, HTML\n",
         "  display(HTML(\"<h2 style='color: yellow;'>Descargando dependencias ¡¡esto puede tardar hasta 6 minutos!!...</h2>\"))\n",
         "  !chmod 755 ./colab_install.sh\n",
-        "  !./colab_install.sh > /dev/null 2> errores.log\n",
+        "  !./colab_install.sh > install_log.txt 2>&1\n",
+        "  clear_output()\n",
         "\n",
         "  # fix logging\n",
         "  !{venv_pip} uninstall -y rich\n",
